<resources>
    <string name="app_name">Hobbylist</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_movies">Movies</string>
    <string name="btn_books">Books</string>
    <string name="btn_games">Games</string>
    <string name="btn_messages">Messages</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="title_activity_books">BooksActivity</string>
    <string name="title_activity_books_main">BooksMainActivity</string>
    <string name="title_activity_messages_main">MessagesMainActivity</string>
    <string name="title_activity_games">GamesActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>

</resources>
