<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HobbylistMainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_movies"
        android:id="@+id/btn_movies"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:onClick="IrAMovies"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_books"
        android:id="@+id/btn_books"
        android:layout_below="@+id/btn_movies"
        android:layout_centerHorizontal="true"
        android:onClick="IrABooks"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_games"
        android:id="@+id/btn_games"
        android:layout_below="@+id/btn_books"
        android:layout_centerHorizontal="true"
        android:onClick="IrAGames"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_messages"
        android:id="@+id/btn_messages"
        android:layout_below="@+id/btn_games"
        android:layout_centerHorizontal="true"
        android:onClick="IrAMessages"/>

</RelativeLayout>
